@@ -219,7 +219,7 @@ $(function() {
         var searchCurrentIndex = 0;
         var searchNextIndex = 0;
 
-        $(window.headerSearch.termInput).on('keyup cut paste', function() {
+        $(window.headerSearch.termInput).on('keyup cut paste change', function() {
             clearTimeout($.data(this, 'timer'));
             var wait = setTimeout(search, 200);
             $(this).data('timer', wait);
@@ -231,25 +231,39 @@ $(function() {
         function search() {
             var workingClasses = 'icon-spinner';
 
-            $(window.headerSearch.termInput).parent().addClass(workingClasses);
-            searchNextIndex++;
-            var index = searchNextIndex;
-            $.ajax({
-                url: window.headerSearch.url,
-                data: {q: $(window.headerSearch.termInput).val()},
-                success: function(data, status) {
-                    if (index > searchCurrentIndex) {
-                        searchCurrentIndex = index;
-                        $(window.headerSearch.targetOutput).html(data).slideDown(800);
-                        window.history.pushState(null, 'Search results', '?q=' + $(window.headerSearch.termInput).val());
+            var newQuery = $(window.headerSearch.termInput).val();
+            var currentQuery = getURLParam('q');
+            // only do the query if it has changed for trimmed queries
+            // eg. " " === "" and "firstword " ==== "firstword"
+            if (currentQuery.trim() !== newQuery.trim()) {
+                $(window.headerSearch.termInput).parent().addClass(workingClasses);
+                searchNextIndex++;
+                var index = searchNextIndex;
+                $.ajax({
+                    url: window.headerSearch.url,
+                    data: {q: newQuery},
+                    success: function(data, status) {
+                        if (index > searchCurrentIndex) {
+                            searchCurrentIndex = index;
+                            $(window.headerSearch.targetOutput).html(data).slideDown(800);
+                            window.history.pushState(null, 'Search results', '?q=' + newQuery);
+                        }
+                    },
+                    complete: function() {
+                        $(window.headerSearch.termInput).parent().removeClass(workingClasses);
                     }
-                },
+                });
+            }
+        };
 
-                complete: function() {
-                    $(window.headerSearch.termInput).parent().removeClass(workingClasses);
-                }
-            });
+        getURLParam = function(name) {
+            var results = new RegExp('[\?&]' + name + '=([^]*)').exec(window.location.search);
+            if (results) {
+                return results[1];
+            }
+            return '';
         }
+
     }
 
     /* Functions that need to run/rerun when active tabs are changed */
